k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: volter
  labels:
    app.kubernetes.io/part-of: volter
